--- a/index.html
+++ b/index.html
@@ -1,3 +1,34 @@
+Skip to content
+PEPEGSON
+River-rating
+Repository navigation
+Code
+Issues
+Pull requests
+Actions
+Projects
+Wiki
+Security
+Insights
+Settings
+Files
+Go to file
+t
+assets
+index.html
+River-rating
+/index.html
+PEPEGSON
+PEPEGSON
+Update index.html
+39e4eaa
+ · 
+yesterday
+
+Code
+
+Blame
+918 lines (802 loc) · 33.1 KB
 <!doctype html>
 <html lang="ru">
 <head>
@@ -172,6 +203,7 @@
       transform:translateY(1px);
     }
 
+    /* PANEL как контейнер-колонка, чтобы lb мог быть скроллом на телефоне */
     .panel{
       margin-top:14px;
       border-radius:var(--radius);
@@ -180,6 +212,9 @@
       box-shadow:var(--shadow);
       backdrop-filter:blur(12px);
       overflow:hidden;
+      display:flex;
+      flex-direction:column;
+      min-height: 200px;
     }
     .panel-head{
       display:flex;
@@ -188,6 +223,7 @@
       padding:14px 16px;
       border-bottom:1px solid rgba(255,255,255,.10);
       background:linear-gradient(to right, rgba(214,181,106,.08), transparent 55%);
+      flex:0 0 auto;
     }
     .panel-title{
       font-family:Cinzel,serif;
@@ -203,6 +239,8 @@
       display:flex;
       flex-direction:column;
       gap:10px;
+      flex:1 1 auto;
+      overflow:visible; /* на десктопе обычный поток */
     }
 
     .lb-row{
@@ -224,9 +262,10 @@
       overflow:hidden;
       cursor:pointer;
 
-      content-visibility:auto;
-      contain-intrinsic-size: 92px 340px;
+      /* ВАЖНО: НИКАКИХ content-visibility / contain — они и давали “скукоживание” */
+      min-height: 76px;
     }
+
     .lb-row:nth-child(odd)::before,
     .lb-row:nth-child(even)::before{
       content:"";
@@ -265,7 +304,12 @@
     .place.p3{ color:rgba(205,127,50,.98); border-color:rgba(205,127,50,.55); box-shadow:0 0 14px rgba(205,127,50,.12); }
 
     .namebox{display:flex;flex-direction:column;gap:6px;min-width:0}
-    .name-top{display:flex;align-items:center;gap:10px;min-width:0}
+    .name-top{
+      display:flex;
+      align-items:center;
+      gap:10px;
+      min-width:0;
+    }
 
     .rank-mini{
       width:40px;height:40px;object-fit:contain;
@@ -273,14 +317,14 @@
       flex:0 0 auto;
     }
 
-    /* имя + t9 справа */
     .nm-wrap{
       display:flex;
       align-items:center;
-      gap:8px;
+      gap:10px;
       min-width:0;
       flex:1 1 auto;
     }
+
     .nm{
       font-family:Cinzel,serif;
       font-weight:700;
@@ -289,38 +333,29 @@
       text-shadow:0 14px 34px rgba(0,0,0,.55);
       overflow:hidden;text-overflow:ellipsis;white-space:nowrap;min-width:0;
     }
-    .t9-mini{
-      width:26px;height:26px;object-fit:contain;
-      filter:drop-shadow(0 10px 14px rgba(0,0,0,.55));
+
+    /* t9 справа от имени */
+    .t9-badge{
+      width:30px;height:30px;
+      object-fit:contain;
+      filter:drop-shadow(0 12px 18px rgba(0,0,0,.55));
       flex:0 0 auto;
       opacity:.98;
     }
 
-    /* достижениями управляем через padding-left, чтобы стартовали под щитом и НЕ оставляли пустоту при скролле */
     .ach-mini{
       display:flex;
       gap:6px;
-      flex-wrap:nowrap;
+      flex-wrap:wrap;
       align-items:center;
 
-      overflow-x:auto;
-      overflow-y:hidden;
-      -webkit-overflow-scrolling:touch;
-
-      scrollbar-width:none;
-      padding-bottom:2px;
-
-      /* ВАЖНО: "начало ленты" всегда под щитом */
-      padding-left:50px;
-      margin-left:-50px;
+      /* ВАЖНО: начинать с того же места что и щит (БЕЗ margin-left) */
+      margin-left:0;
     }
-    .ach-mini::-webkit-scrollbar{height:0}
-
     .ach-mini img{
       width:24px;height:24px;object-fit:contain;
       filter:drop-shadow(0 10px 14px rgba(0,0,0,.55));
       opacity:.95;
-      flex:0 0 auto;
     }
 
     .scores{
@@ -343,37 +378,81 @@
     .score-pill .lbl{font-size:10px;color:rgba(255,255,255,.55);letter-spacing:.06em;text-transform:uppercase}
     .score-pill .val{margin-top:4px;font-size:20px;font-weight:800;color:rgba(255,255,255,.92)}
 
-    /* ====== МОБИЛЬНАЯ АДАПТАЦИЯ ====== */
+    /* ====== МОБИЛЬНАЯ АДАПТАЦИЯ + фикс “скролл только таблицы” ====== */
     @media (max-width: 760px){
-      .topbar{display:flex;flex-direction:column;align-items:center;gap:10px;text-align:center}
+      html,body{height:100%}
+      body{
+        overflow:hidden; /* чтобы страница не скроллилась, будет скроллиться только lb */
+      }
+
+      .wrap{
+        height:100dvh;
+        margin:0 auto;
+        padding:14px 0 14px;
+        display:flex;
+        flex-direction:column;
+      }
+
+      .topbar{
+        display:flex;
+        flex-direction:column;
+        align-items:center;
+        gap:10px;
+        text-align:center;
+        flex:0 0 auto;
+      }
       .brand{min-width:0;justify-content:center}
       .brand img{height:42px}
       .season-name{text-align:center;max-width:92vw}
       .center-title .title{font-size:18px;letter-spacing:.08em}
 
-      .lb{padding:10px 10px 14px; gap:10px;}
+      .controls{
+        flex:0 0 auto;
+      }
 
+      /* панель занимает остаток высоты */
+      .panel{
+        flex:1 1 auto;
+        min-height: 0; /* критично для корректного overflow в flex */
+      }
+
+      /* и скроллим только список */
+      .lb{
+        padding:10px 10px 14px;
+        gap:10px;
+        overflow:auto;
+        -webkit-overflow-scrolling:touch;
+      }
+
+      /* структура как на ПК, но компактнее */
       .lb-row{
         grid-template-columns: 54px 1fr auto;
         gap:8px;
-        padding:12px 10px; /* чуть выше, чтобы не "прилипало вниз" */
+        padding:10px 10px;
         border-radius:16px;
-        align-items:center; /* центр по вертикали */
+        min-height: 64px; /* фикс высоты чтобы НЕ сжималось */
       }
 
       .place{width:42px;height:42px;font-size:16px}
 
       .rank-mini{width:28px;height:28px}
       .nm{font-size:17px}
-      .t9-mini{width:20px;height:20px}
 
-      /* Под щитом начало */
+      .t9-badge{width:26px;height:26px}
+
+      /* много достижений -> горизонтальный свайп, но старт слева как у щита */
       .ach-mini{
-        padding-left:38px;
-        margin-left:-38px;
         gap:5px;
+        flex-wrap:nowrap;
+        overflow-x:auto;
+        overflow-y:hidden;
+        -webkit-overflow-scrolling:touch;
+        padding-bottom:2px;
       }
       .ach-mini img{width:18px;height:18px}
+
+      .ach-mini::-webkit-scrollbar{height:0}
+      .ach-mini{scrollbar-width:none}
 
       .scores{gap:6px}
       .score-pill{
@@ -584,13 +663,6 @@
     return await res.json();
   }
 
-  // ✅ ВАЖНО: устанавливаем текущий сезон (пишет Leaderboard!G2)
-  async function apiSetSeason(seasonId){
-    try{
-      await fetch(`${API_BASE}?season_id=${encodeURIComponent(seasonId)}`, { cache: "no-store" });
-    }catch(e){}
-  }
-
   let seasonsCache = [];
 
   function updateSeasonName(){
@@ -608,22 +680,14 @@
   }
 
   function miniAchievementsHtml(list){
-    const itemsAll = (list || []).map(x => String(x).trim()).filter(Boolean);
-    if (!itemsAll.length) return "";
-
-    // t9 вынесем отдельно справа от имени
-    const items = itemsAll.filter(x => x !== "t9");
+    const items = (list || []).map(x => String(x).trim()).filter(Boolean).slice(0, 30);
     if (!items.length) return "";
-
     return `<div class="ach-mini">` + items.map(t => `<img loading="lazy" decoding="async" src="./assets/${t}.png" alt="${t}">`).join("") + `</div>`;
   }
 
   async function renderLeaderboard(){
     setStatus("Загрузка…");
     const seasonId = up(seasonSelect.value);
-
-    // ✅ синхронизируем "текущий сезон" в Sheets
-    await apiSetSeason(seasonId);
 
     const dash = await apiDashboard(seasonId);
     const rowsRaw = dash.leaderboard || [];
@@ -638,12 +702,15 @@
     lbEl.innerHTML = rows.map((r, idx) => {
       const place = idx + 1;
       const rankLevel = Number(r.rank_level || 1);
-      const achList = r.achievements_list || (String(r.achievements || "").split(",").map(s=>s.trim()).filter(Boolean));
 
-      const hasT9 = (achList || []).includes("t9");
+      const achRaw = r.achievements_list || (String(r.achievements || "").split(",").map(s=>s.trim()).filter(Boolean));
+      const hasT9 = achRaw.includes("t9");
+      const achList = achRaw.filter(x => x !== "t9"); // t9 убираем из строки
 
       const seasonScore = toNum(r.season_score);
       const totalScore  = toNum(r.all_seasons_score);
+
+      const t9Html = hasT9 ? `<img class="t9-badge" decoding="async" loading="eager" src="./assets/t9.png" alt="t9">` : "";
 
       return `
         <div class="lb-row" data-player="${r.player_id}">
@@ -651,13 +718,12 @@
 
           <div class="namebox">
             <div class="name-top">
-              <img class="rank-mini" decoding="async" loading="eager" src="./assets/rank${rankLevel}.png" alt="rank${rankLevel}">
+              <img class="rank-mini" decoding="async" loading="eager" src="./assets/rank${rankLevel}.png" alt="rank${rankLevel}" onerror="this.style.display='none'">
               <div class="nm-wrap">
                 <div class="nm">${r.name ?? ""}</div>
-                ${hasT9 ? `<img class="t9-mini" decoding="async" loading="eager" src="./assets/t9.png" alt="t9">` : ``}
+                ${t9Html}
               </div>
             </div>
-
             ${miniAchievementsHtml(achList)}
           </div>
 
@@ -831,7 +897,6 @@
 
       const currentSeason = up(meta.current_season_id || "");
       const exists = seasonsCache.some(s => up(s.season_id) === currentSeason);
-
       if (currentSeason && exists) seasonSelect.value = currentSeason;
       else if (seasonsCache.length) seasonSelect.value = up(seasonsCache[seasonsCache.length - 1].season_id);
       else seasonSelect.value = "TOTAL";
@@ -882,3 +947,4 @@
 </script>
 </body>
 </html>
+ 
